{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 654,
  "lineage": "62ef90df-0d8d-36d4-c2db-7ffe34dc0456",
  "resources": [
    {
      "module": "module.blockchain-gateway",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:targetgroup/ecs20240526232609563900000001/c880b318820d9551",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:listener-rule/app/ecs20240526231817703200000003/c8ebe38c68991092/de4b7ef540bf68c9/7228d64c54c8bd32",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/blockchain-gateway"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:listener-rule/app/ecs20240526231817703200000003/c8ebe38c68991092/de4b7ef540bf68c9/7228d64c54c8bd32",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:listener/app/ecs20240526231817703200000003/c8ebe38c68991092/de4b7ef540bf68c9",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "module.blockchain-gateway.aws_lb_target_group.target_group_public",
            "module.blockchain-gateway.data.aws_ssm_parameter.aws_vpc_main_id",
            "module.blockchain-gateway.data.aws_ssm_parameter.lb_lister_public_arn",
            "module.platform.aws_ecs_cluster.main",
            "module.platform.aws_lb.public",
            "module.platform.aws_lb_listener.public_http",
            "module.platform.aws_security_group.ecs_fargate_shared_sg",
            "module.platform.aws_security_group.public_lb_access",
            "module.platform.aws_ssm_parameter.aws_ecs_cluster_main_id",
            "module.platform.aws_ssm_parameter.aws_lb_listener_public_http_arn",
            "module.platform.aws_ssm_parameter.aws_security_group_ecs_fargate_shared_sg_id",
            "module.platform.aws_ssm_parameter.aws_vpc_main",
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.platform.module.vpc.aws_customer_gateway.this",
            "module.platform.module.vpc.aws_db_subnet_group.database",
            "module.platform.module.vpc.aws_default_network_acl.this",
            "module.platform.module.vpc.aws_default_route_table.default",
            "module.platform.module.vpc.aws_default_security_group.this",
            "module.platform.module.vpc.aws_default_vpc.this",
            "module.platform.module.vpc.aws_egress_only_internet_gateway.this",
            "module.platform.module.vpc.aws_eip.nat",
            "module.platform.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.platform.module.vpc.aws_flow_log.this",
            "module.platform.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.platform.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.platform.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.platform.module.vpc.aws_internet_gateway.this",
            "module.platform.module.vpc.aws_nat_gateway.this",
            "module.platform.module.vpc.aws_network_acl.database",
            "module.platform.module.vpc.aws_network_acl.elasticache",
            "module.platform.module.vpc.aws_network_acl.intra",
            "module.platform.module.vpc.aws_network_acl.outpost",
            "module.platform.module.vpc.aws_network_acl.private",
            "module.platform.module.vpc.aws_network_acl.public",
            "module.platform.module.vpc.aws_network_acl.redshift",
            "module.platform.module.vpc.aws_network_acl_rule.database_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.database_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.private_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.private_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.public_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.public_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.platform.module.vpc.aws_redshift_subnet_group.redshift",
            "module.platform.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.platform.module.vpc.aws_route.database_internet_gateway",
            "module.platform.module.vpc.aws_route.database_ipv6_egress",
            "module.platform.module.vpc.aws_route.database_nat_gateway",
            "module.platform.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.platform.module.vpc.aws_route.private_ipv6_egress",
            "module.platform.module.vpc.aws_route.private_nat_gateway",
            "module.platform.module.vpc.aws_route.public_internet_gateway",
            "module.platform.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.platform.module.vpc.aws_route_table.database",
            "module.platform.module.vpc.aws_route_table.elasticache",
            "module.platform.module.vpc.aws_route_table.intra",
            "module.platform.module.vpc.aws_route_table.private",
            "module.platform.module.vpc.aws_route_table.public",
            "module.platform.module.vpc.aws_route_table.redshift",
            "module.platform.module.vpc.aws_route_table_association.database",
            "module.platform.module.vpc.aws_route_table_association.elasticache",
            "module.platform.module.vpc.aws_route_table_association.intra",
            "module.platform.module.vpc.aws_route_table_association.outpost",
            "module.platform.module.vpc.aws_route_table_association.private",
            "module.platform.module.vpc.aws_route_table_association.public",
            "module.platform.module.vpc.aws_route_table_association.redshift",
            "module.platform.module.vpc.aws_route_table_association.redshift_public",
            "module.platform.module.vpc.aws_subnet.database",
            "module.platform.module.vpc.aws_subnet.elasticache",
            "module.platform.module.vpc.aws_subnet.intra",
            "module.platform.module.vpc.aws_subnet.outpost",
            "module.platform.module.vpc.aws_subnet.private",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_subnet.redshift",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_dhcp_options.this",
            "module.platform.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.platform.module.vpc.aws_vpn_gateway.this",
            "module.platform.module.vpc.aws_vpn_gateway_attachment.this",
            "module.platform.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.platform.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.platform.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.platform.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.platform.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.blockchain-gateway",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:targetgroup/ecs20240526232609563900000001/c880b318820d9551",
            "arn_suffix": "targetgroup/ecs20240526232609563900000001/c880b318820d9551",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:targetgroup/ecs20240526232609563900000001/c880b318820d9551",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs20240526232609563900000001",
            "name_prefix": "ecs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.blockchain-gateway.data.aws_ssm_parameter.aws_vpc_main_id",
            "module.platform.aws_ecs_cluster.main",
            "module.platform.aws_lb.public",
            "module.platform.aws_lb_listener.public_http",
            "module.platform.aws_security_group.ecs_fargate_shared_sg",
            "module.platform.aws_security_group.public_lb_access",
            "module.platform.aws_ssm_parameter.aws_ecs_cluster_main_id",
            "module.platform.aws_ssm_parameter.aws_lb_listener_public_http_arn",
            "module.platform.aws_ssm_parameter.aws_security_group_ecs_fargate_shared_sg_id",
            "module.platform.aws_ssm_parameter.aws_vpc_main",
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.platform.module.vpc.aws_customer_gateway.this",
            "module.platform.module.vpc.aws_db_subnet_group.database",
            "module.platform.module.vpc.aws_default_network_acl.this",
            "module.platform.module.vpc.aws_default_route_table.default",
            "module.platform.module.vpc.aws_default_security_group.this",
            "module.platform.module.vpc.aws_default_vpc.this",
            "module.platform.module.vpc.aws_egress_only_internet_gateway.this",
            "module.platform.module.vpc.aws_eip.nat",
            "module.platform.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.platform.module.vpc.aws_flow_log.this",
            "module.platform.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.platform.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.platform.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.platform.module.vpc.aws_internet_gateway.this",
            "module.platform.module.vpc.aws_nat_gateway.this",
            "module.platform.module.vpc.aws_network_acl.database",
            "module.platform.module.vpc.aws_network_acl.elasticache",
            "module.platform.module.vpc.aws_network_acl.intra",
            "module.platform.module.vpc.aws_network_acl.outpost",
            "module.platform.module.vpc.aws_network_acl.private",
            "module.platform.module.vpc.aws_network_acl.public",
            "module.platform.module.vpc.aws_network_acl.redshift",
            "module.platform.module.vpc.aws_network_acl_rule.database_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.database_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.private_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.private_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.public_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.public_outbound",
            "module.platform.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.platform.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.platform.module.vpc.aws_redshift_subnet_group.redshift",
            "module.platform.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.platform.module.vpc.aws_route.database_internet_gateway",
            "module.platform.module.vpc.aws_route.database_ipv6_egress",
            "module.platform.module.vpc.aws_route.database_nat_gateway",
            "module.platform.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.platform.module.vpc.aws_route.private_ipv6_egress",
            "module.platform.module.vpc.aws_route.private_nat_gateway",
            "module.platform.module.vpc.aws_route.public_internet_gateway",
            "module.platform.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.platform.module.vpc.aws_route_table.database",
            "module.platform.module.vpc.aws_route_table.elasticache",
            "module.platform.module.vpc.aws_route_table.intra",
            "module.platform.module.vpc.aws_route_table.private",
            "module.platform.module.vpc.aws_route_table.public",
            "module.platform.module.vpc.aws_route_table.redshift",
            "module.platform.module.vpc.aws_route_table_association.database",
            "module.platform.module.vpc.aws_route_table_association.elasticache",
            "module.platform.module.vpc.aws_route_table_association.intra",
            "module.platform.module.vpc.aws_route_table_association.outpost",
            "module.platform.module.vpc.aws_route_table_association.private",
            "module.platform.module.vpc.aws_route_table_association.public",
            "module.platform.module.vpc.aws_route_table_association.redshift",
            "module.platform.module.vpc.aws_route_table_association.redshift_public",
            "module.platform.module.vpc.aws_subnet.database",
            "module.platform.module.vpc.aws_subnet.elasticache",
            "module.platform.module.vpc.aws_subnet.intra",
            "module.platform.module.vpc.aws_subnet.outpost",
            "module.platform.module.vpc.aws_subnet.private",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_subnet.redshift",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_dhcp_options.this",
            "module.platform.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.platform.module.vpc.aws_vpn_gateway.this",
            "module.platform.module.vpc.aws_vpn_gateway_attachment.this",
            "module.platform.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.platform.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.platform.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.platform.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.platform.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:loadbalancer/app/ecs20240526231817703200000003/c8ebe38c68991092",
            "arn_suffix": "app/ecs20240526231817703200000003/c8ebe38c68991092",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs20240526231817703200000003-242064668.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:loadbalancer/app/ecs20240526231817703200000003/c8ebe38c68991092",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs20240526231817703200000003",
            "name_prefix": "ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3838f977e883994"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0179d4d35f518c3a8"
              },
              {
                "subnet_id": "subnet-018e79cef2d1ececb"
              },
              {
                "subnet_id": "subnet-0992b39c2c138ae33"
              }
            ],
            "subnets": [
              "subnet-0179d4d35f518c3a8",
              "subnet-018e79cef2d1ececb",
              "subnet-0992b39c2c138ae33"
            ],
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "vpc_id": "vpc-048dd799d55892cca",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.platform.aws_security_group.public_lb_access",
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:listener/app/ecs20240526231817703200000003/c8ebe38c68991092/de4b7ef540bf68c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:listener/app/ecs20240526231817703200000003/c8ebe38c68991092/de4b7ef540bf68c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:396431934545:loadbalancer/app/ecs20240526231817703200000003/c8ebe38c68991092",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.aws_lb.public",
            "module.platform.aws_security_group.public_lb_access",
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_fargate_shared_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:security-group/sg-0dcb26f06cf1aad7c",
            "description": "Share ECS Fargate Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcb26f06cf1aad7c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b3838f977e883994"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20240526231817704500000004",
            "name_prefix": "terraform-",
            "owner_id": "396431934545",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.aws_security_group.public_lb_access",
            "module.platform.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_lb_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:security-group/sg-0b3838f977e883994",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3838f977e883994",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240526231815221300000002",
            "name_prefix": "terraform-",
            "owner_id": "396431934545",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:network-acl/acl-0ff8eb24c3befb73c",
            "default_network_acl_id": "acl-0ff8eb24c3befb73c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ff8eb24c3befb73c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "396431934545",
            "subnet_ids": [
              "subnet-0179d4d35f518c3a8",
              "subnet-018e79cef2d1ececb",
              "subnet-0992b39c2c138ae33"
            ],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:route-table/rtb-037b6a05a79cfef19",
            "default_route_table_id": "rtb-037b6a05a79cfef19",
            "id": "rtb-037b6a05a79cfef19",
            "owner_id": "396431934545",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:security-group/sg-06867ed169ea665c5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06867ed169ea665c5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "396431934545",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:internet-gateway/igw-049af33a43eda1652",
            "id": "igw-049af33a43eda1652",
            "owner_id": "396431934545",
            "tags": {
            },
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-049af33a43eda1652",
            "id": "r-rtb-0a2dcb56971320e1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2dcb56971320e1d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_internet_gateway.this",
            "module.platform.module.vpc.aws_route_table.public",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:route-table/rtb-0a2dcb56971320e1d",
            "id": "rtb-0a2dcb56971320e1d",
            "owner_id": "396431934545",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049af33a43eda1652",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eaf1f3b202956c7",
            "route_table_id": "rtb-0a2dcb56971320e1d",
            "subnet_id": "subnet-018e79cef2d1ececb"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_route_table.public",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e713f99a4f1233",
            "route_table_id": "rtb-0a2dcb56971320e1d",
            "subnet_id": "subnet-0179d4d35f518c3a8"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_route_table.public",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dd960e3f7572e69",
            "route_table_id": "rtb-0a2dcb56971320e1d",
            "subnet_id": "subnet-0992b39c2c138ae33"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_route_table.public",
            "module.platform.module.vpc.aws_subnet.public",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:subnet/subnet-018e79cef2d1ececb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018e79cef2d1ececb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396431934545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-1a",
              "tier": "public"
            },
            "tags_all": {
              "Name": "-public-eu-west-1a",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform",
              "tier": "public"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:subnet/subnet-0179d4d35f518c3a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0179d4d35f518c3a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396431934545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-1b",
              "tier": "public"
            },
            "tags_all": {
              "Name": "-public-eu-west-1b",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform",
              "tier": "public"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:subnet/subnet-0992b39c2c138ae33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0992b39c2c138ae33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396431934545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-1c",
              "tier": "public"
            },
            "tags_all": {
              "Name": "-public-eu-west-1c",
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform",
              "tier": "public"
            },
            "vpc_id": "vpc-048dd799d55892cca"
          },
          "dependencies": [
            "module.platform.data.aws_availability_zones.available",
            "module.platform.module.vpc.aws_vpc.this",
            "module.platform.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.platform.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:396431934545:vpc/vpc-048dd799d55892cca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff8eb24c3befb73c",
            "default_route_table_id": "rtb-037b6a05a79cfef19",
            "default_security_group_id": "sg-06867ed169ea665c5",
            "dhcp_options_id": "dopt-0c29842afc48b7cf7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048dd799d55892cca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037b6a05a79cfef19",
            "owner_id": "396431934545",
            "tags": {
            },
            "tags_all": {
              "environment": "test",
              "managed-by": "terraform",
              "repo-link": "https://github.com/vyrwu/polygon-demo",
              "team": "platform"
            }
          }
        }
      ]
    }
  ]
}